--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     <div class="list-group">
         <a href="#" class="list-group-item list-group-item-info">Spis treści <i class="bi bi-card-list"></i></a>
         <a href="#" class="list-group-item list-group-item-action">Home <i class="bi bi-house"></i></a>
-        <a href="/k1.html" class="list-group-item list-group-item-action">Księga 1 <i class="bi bi-book-fill"></i></a>
-        <a href="/k2.html" class="list-group-item list-group-item-action">Księga 2 <i class="bi bi-book-fill"></i></a>
-        <a href="/k3.html" class="list-group-item list-group-item-action">Księga 3 <i class="bi bi-book-fill"></i></a>
-        <a href="/k4.html" class="list-group-item list-group-item-action">Księga 4 <i class="bi bi-book-fill"></i></a>
-        <a href="/k5.html" class="list-group-item list-group-item-action">Księga 5 <i class="bi bi-book-fill"></i></a>
-        <a href="/k6.html" class="list-group-item list-group-item-action">Księga 6 <i class="bi bi-book-fill"></i></a>
-        <a href="/k7.html" class="list-group-item list-group-item-action">Księga 7 <i class="bi bi-book-fill"></i></a>
-        <a href="/k8.html" class="list-group-item list-group-item-action">Księga 8 <i class="bi bi-book-fill"></i></a>
-        <a href="/k9.html" class="list-group-item list-group-item-action">Księga 9 <i class="bi bi-book-fill"></i></a>
-        <a href="/k10.html" class="list-group-item list-group-item-action">Księga 10 <i class="bi bi-book-fill"></i></a>
-        <a href="/k11.html" class="list-group-item list-group-item-action">Księga 11 <i class="bi bi-book-fill"></i></a>
-        <a href="/k12.html" class="list-group-item list-group-item-action">Księga 12 <i class="bi bi-book-fill"></i></a>
+        <a href="./k1.html" class="list-group-item list-group-item-action">Księga 1 <i class="bi bi-book-fill"></i></a>
+        <a href="./k2.html" class="list-group-item list-group-item-action">Księga 2 <i class="bi bi-book-fill"></i></a>
+        <a href="./k3.html" class="list-group-item list-group-item-action">Księga 3 <i class="bi bi-book-fill"></i></a>
+        <a href="./k4.html" class="list-group-item list-group-item-action">Księga 4 <i class="bi bi-book-fill"></i></a>
+        <a href="./k5.html" class="list-group-item list-group-item-action">Księga 5 <i class="bi bi-book-fill"></i></a>
+        <a href="./k6.html" class="list-group-item list-group-item-action">Księga 6 <i class="bi bi-book-fill"></i></a>
+        <a href="./k7.html" class="list-group-item list-group-item-action">Księga 7 <i class="bi bi-book-fill"></i></a>
+        <a href="./k8.html" class="list-group-item list-group-item-action">Księga 8 <i class="bi bi-book-fill"></i></a>
+        <a href="./k9.html" class="list-group-item list-group-item-action">Księga 9 <i class="bi bi-book-fill"></i></a>
+        <a href="./k10.html" class="list-group-item list-group-item-action">Księga 10 <i class="bi bi-book-fill"></i></a>
+        <a href="./k11.html" class="list-group-item list-group-item-action">Księga 11 <i class="bi bi-book-fill"></i></a>
+        <a href="./k12.html" class="list-group-item list-group-item-action">Księga 12 <i class="bi bi-book-fill"></i></a>
       </div>
     </div>
     </div class = "col-9">
